# intraday_trading

./: .gitignore  .mcp.json  AGENT.md  AGENTS.md  AUTORESEARCH.md  CLAUDE.md  README.md  RESEARCH.md  TEST_REVIEW_GUIDE.md  pyproject.toml  pytest.ini  run_all.sh  run_footprint_all.sh  run_timeclock.sh  sim.md  sim2.md  strategies_ontology.json
.claude/: settings.json
.githooks/: pre-commit
config/: expression_axes.yaml  failure_modes.yaml  feature_vocab.yaml  targets.yaml  timeframes.yaml
docs/: AGENT_WORKFLOW_IMPROVEMENT.md  ALPHA_ARTIFACT_CONTRACT.md  HELIX_MM_PRD.md  IS_OS_VALIDATION_RULES.md  MANUAL_BACKTEST.md  PORTFOLIO_STRATEGY_REPORT.md  PRD_QUANT_AGENT.md  PRD_STRATEGY_ONTOLOGY.md  PROJECT_INSIGHTS.md  index.html
live/: README.md  com.intraday.composite_amihud_gross5_forward_tick.plist  com.intraday.forward_tick.plist
notebooks/: 01_orderbook_basics.ipynb
research/: README.md  cutoff_analysis.md  cutoff_analysis_ko.html  cutoff_analysis_ko.md
scripts/: add_semantic_fields.py  attempt_loop.py  build_candles_example.py  build_ontology.py  diagnose_infra.py  diagnose_vwap_issue.py  diagnose_vwap_simple.py  download_data.py  download_klines.py  measure_latency.py  measure_streaming_speed.py  preprocess_data.py  reprocess_attempts.py  run_atr_unitrisk_backtest.py  run_atr_volume_backtest.py  run_atr_volume_unitrisk_backtest.py  run_batch_backtests.py  run_dashboard.py  run_forward_test.py  run_forward_tick.py  run_live_composite_amihud_gross5_tick.py  run_ma_backtest.py  run_manual_backtest.py  run_orderbook_backtest.py  run_pair_trading.py  run_portfolio_forward_test.py  run_portfolio_momentum.py  run_portfolio_momentum_candles.py  run_regime_backtest.py  run_tick_backtest.py  run_tick_forward_test.py  run_vpin_backtest.py  run_vpin_breakout_comparison.py  run_workflow_portfolio_backtest.py  validate_is_os.py
tests/: __init__.py  conftest.py  test_agent_exploration.py  test_agent_workflow.py  test_backtest.py  test_backtest_pnl_verification.py  (+57 more)
(+7883 files in other folders)
