[project]
name = "intraday"
version = "0.1.0"
description = "Intraday Trading Education - Binance Orderbook Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
    "nicegui>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intraday"]

[tool.ruff]
line-length = 100
target-version = "py311"

